--- a/homepage.html
+++ b/homepage.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="el">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Αρχική - Τράπεζα Πειραιώς</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet" />
+  <title>Home - Internal Information System</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet" />
   <style>
     :root {
       --blue: #00205B;
@@ -13,6 +13,7 @@
       --gray-light: #f4f6f8;
       --gray-medium: #ccd6dd;
       --text-dark: #333333;
+      --accent: #4CAF50;
     }
     * { box-sizing: border-box; }
     body {
@@ -24,10 +25,6 @@
       height: 100vh;
       overflow: hidden;
     }
-    .content h1 {
-      text-align: center;
-    }
-    /* Κίτρινη κορυφαία μπάρα */
     .top-bar {
       background: var(--yellow);
       height: 180px;
@@ -39,7 +36,6 @@
       width: 200px;
       height: auto;
     }
-    /* Μπλε υπο-μπάρα με επιλογές */
     .subnav {
       background: #02272e;
       height: 50px;
@@ -54,7 +50,6 @@
       margin-right: 20px;
       font-size: 16px;
     }
-    /* Κουμπί sidebar κάτω από τη μπλε μπάρα */
     .sidebar-toggle {
       background: #02272e;
       color: white;
@@ -67,7 +62,6 @@
       margin: 10px 20px;
       align-self: flex-start;
     }
-    /* Sidebar panel */
     .sidebar {
       position: fixed;
       top: 300px;
@@ -85,20 +79,140 @@
     .sidebar ul { list-style: none; padding: 0; margin: 0; }
     .sidebar ul li { margin-bottom: 15px; }
     .sidebar ul li a { color: var(--blue); text-decoration: none; font-weight: 500; }
-    /* Κύριο περιεχόμενο */
     .content {
       flex: 1;
       padding: 20px;
       overflow-y: auto;
     }
+    /* New Sections */
+    .hero {
+      background: url('photos/hero-bg.jpg') center/cover no-repeat;
+      height: 300px;
+      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-bottom: 20px;
+    }
+    .hero-overlay {
+      background: rgba(0,0,0,0.5);
+      color: white;
+      text-align: center;
+      padding: 20px;
+      border-radius: 8px;
+    }
+    .btn-primary {
+      display: inline-block;
+      margin-top: 15px;
+      padding: 12px 24px;
+      background: var(--blue);
+      color: white;
+      border-radius: 4px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .kpi-cards {
+      display: grid;
+      grid-template-columns: repeat(auto-fit,minmax(180px,1fr));
+      gap: 20px;
+      margin: 20px 0;
+    }
+    .kpi-cards .card {
+      background: white;
+      padding: 15px;
+      border-radius: 8px;
+      box-shadow: 0 1px 4px rgba(0,0,0,0.1);
+      text-align: center;
+    }
+    .kpi-cards .card h4 { margin-bottom: 8px; font-weight: 500; }
+    .kpi-cards .card p { font-size: 24px; margin: 0; }
+    .alerts, .recent-reports, .internal-news, .my-tasks {
+      background: white;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 1px 4px rgba(0,0,0,0.1);
+      margin-bottom: 20px;
+    }
+    .alerts h3, .recent-reports h3, .internal-news h3, .my-tasks h3 {
+      margin-top: 0;
+      font-weight: 500;
+    }
+    .alerts ul, .my-tasks ul { list-style: none; padding: 0; margin: 0; }
+    .alerts li, .my-tasks li { margin-bottom: 8px; }
+    .alerts a, .recent-reports .report-card, .internal-news article {
+      display: block;
+      text-decoration: none;
+      color: var(--text-dark);
+    }
+    .recent-reports .report-card { margin-bottom: 12px; }
+    .recent-reports .report-card h4 { margin: 0 0 4px; font-weight: 500; }
+    .recent-reports .report-card small { color: #666; }
+    .internal-news article { margin-bottom: 12px; }
+    .internal-news strong { margin-right: 6px; }
+    .quick-links {
+      display: flex;
+      gap: 10px;
+      align-items: center;
+      margin: 20px 0;
+    }
+    .quick-links input { flex: 1; padding: 8px 12px; border: 1px solid var(--gray-medium); border-radius: 4px; }
+    .btn-small { padding: 8px 16px; background: var(--blue); color: white; border-radius: 4px; text-decoration: none; font-size: 14px; }
+    @media (max-width: 768px) {
+      .kpi-cards { grid-template-columns: 1fr; }
+    }
+    /* Notification Card Styles */
+    .notifications {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+    }
+    .notification-card {
+      background: white;
+      border-left: 5px solid var(--accent);
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      padding: 20px;
+      border-radius: 8px;
+      max-width: 500px;
+      width: 100%;
+    }
+    .notification-header {
+      display: flex;
+      align-items: center;
+      margin-bottom: 12px;
+    }
+    .notification-header .avatar {
+      font-size: 32px;
+      margin-right: 12px;
+    }
+    .notification-header strong {
+      font-size: 18px;
+      margin-right: auto;
+    }
+    .notification-header .timestamp {
+      font-size: 14px;
+      color: #666;
+    }
+    .notification-body p {
+      font-size: 20px;
+      color: var(--text-dark);
+      margin: 0;
+      line-height: 1.4;
+    }
+    @media (max-width: 600px) {
+      .notification-card { padding: 15px; }
+      .notification-body p { font-size: 18px; }
+    }
   </style>
 </head>
 <body>
   <div class="top-bar">
-    <img src="file:///C:/Piraeus-Bank-Project/photos/newlogo.png" alt="Λογότυπο Πειραιώς" class="bank-logo">
+    <img src="file:///C:/Piraeus-Bank-Project/photos/newlogo.png" alt="Piraeus Bank Logo" class="bank-logo">
   </div>
   <div class="subnav">
-    <a href="#">ΑΡΧΙΚΗ</a>
+    <a href="#" id="homeLink">HOME</a>
+    <a href="#" id="notificationsLink">NOTIFICATIONS</a>
+    <a href="#" id="newsLink">NEWS</a>
   </div>
   <button id="sidebarToggle" class="sidebar-toggle">☰</button>
   <div id="sidebar" class="sidebar">
@@ -110,32 +224,117 @@
       <li><a href="#">Report Editing for Presentation Use</a></li>
     </ul>
   </div>
-  <div class="content">
-    <h1>Καλώς ήρθατε στην Αρχική Σελίδα</h1>
+  <div class="content" id="mainContent">
+    <!-- Hero Section -->
+    <section class="hero">
+      <div class="hero-overlay">
+        <h2>Welcome to the Dashboard</h2>
+        <p>Instant access to KPIs, announcements, and tasks</p>
+        <a href="#" class="btn-primary">View Reports</a>
+      </div>
+    </section>
+    <!-- KPI Cards -->
+    <section class="kpi-cards">
+      <div class="card">
+        <h4>FX Volume YTD</h4>
+        <p>€1.2 B</p>
+      </div>
+      <div class="card">
+        <h4>Pending Approvals</h4>
+        <p>8</p>
+      </div>
+      <div class="card">
+        <h4>Exceptions</h4>
+        <p>3</p>
+      </div>
+      <div class="card">
+        <h4>New Requests</h4>
+        <p>15</p>
+      </div>
+    </section>
+    <!-- Alerts -->
+    <section class="alerts">
+      <h3>Pending Actions</h3>
+      <ul>
+        <li><a href="#">Approval: FX parameter set (3 items)</a></li>
+        <li><a href="#">Validation: Q1 FX report</a></li>
+        <li><a href="#">Compliance Alert: Rate deviation</a></li>
+      </ul>
+    </section>
+    <!-- Recent Reports -->
+    <section class="recent-reports">
+      <h3>Recent Reports</h3>
+      <div class="report-card">
+        <h4>Q1 FX Strategy Review</h4>
+        <small>25 Apr 2025</small>
+      </div>
+      <div class="report-card">
+        <h4>Monthly FX Volume Report</h4>
+        <small>20 Apr 2025</small>
+      </div>
+    </section>
+    <!-- Internal News -->
+    <section class="internal-news">
+      <h3>Announcements</h3>
+      <article>
+        <p><strong>28/04/2025:</strong> New FX parameter approval process.</p>
+      </article>
+      <article>
+        <p><strong>22/04/2025:</strong> Reporting system upgrade.</p>
+      </article>
+    </section>
+    <!-- My Tasks -->
+    <section class="my-tasks">
+      <h3>Today's Schedule</h3>
+      <ul>
+        <li>10:00 – FX Committee Meeting</li>
+        <li>14:00 – Review Strategy Deck</li>
+        <li>16:00 – Compliance Check</li>
+      </ul>
+    </section>
+    <!-- Quick Links -->
+    <div class="quick-links">
+      <input type="text" placeholder="Search report…">
+      <a href="#" class="btn-small">New FX Report</a>
+      <a href="#" class="btn-small">Parameter Mgmt</a>
+    </div>
   </div>
   <script>
-    // Toggle εμφάνισης sidebar
     document.getElementById('sidebarToggle').addEventListener('click', function() {
       document.getElementById('sidebar').classList.toggle('active');
     });
-
-    // Όταν πατάμε επιλογή από sidebar, αλλάζει το h1 στο ίδιο παράθυρο
     function showView(e) {
       e.preventDefault();
       const linkText = e.currentTarget.textContent.trim();
-      document.querySelector('.content h1').textContent = linkText;
+      document.getElementById('mainContent').innerHTML = '<h1>' + linkText + '</h1>';
     }
-
-    document.querySelectorAll('.sidebar ul li a').forEach(link => {
-      link.addEventListener('click', showView);
+    document.querySelectorAll('.sidebar ul li a').forEach(link => link.addEventListener('click', showView));
+    document.getElementById('homeLink').addEventListener('click', function(e) {
+      e.preventDefault(); location.reload();
     });
-
-    // Όταν πατάμε το ΑΡΧΙΚΗ, επιστροφή στην αρχική
-    document.querySelector('.subnav a').addEventListener('click', function(e) {
+    document.getElementById('notificationsLink').addEventListener('click', function(e) {
       e.preventDefault();
-      document.querySelector('.content h1').textContent = 'Καλώς ήρθατε στην Αρχική Σελίδα';
+      document.getElementById('mainContent').innerHTML = `
+        <section class="notifications">
+          <div class="notification-card">
+            <div class="notification-header">
+              <span class="avatar">👤</span>
+              <strong>Head of Foreign Exchange</strong>
+              <span class="timestamp">11:45 AM, 29 April 2025</span>
+            </div>
+            <div class="notification-body">
+              <p>FX report is ready. Please take a look.</p>
+            </div>
+          </div>
+        </section>
+      `;
+    });
+    document.getElementById('newsLink').addEventListener('click', function(e) {
+      e.preventDefault(); document.getElementById('mainContent').innerHTML = `
+        <h1>FX Trading News: Euro Strengthens after ECB Statements</h1>
+        <p><em>29 April 2025</em> – The euro gained 0.5% against the dollar.</p>
+      `;
     });
   </script>
 </body>
 </html>
-
