--- a/homepage.html
+++ b/homepage.html
@@ -84,7 +84,6 @@
       padding: 20px;
       overflow-y: auto;
     }
-    /* New Sections */
     .hero {
       background: url('photos/hero-bg.jpg') center/cover no-repeat;
       height: 300px;
@@ -160,7 +159,6 @@
     @media (max-width: 768px) {
       .kpi-cards { grid-template-columns: 1fr; }
     }
-    /* Notification Card Styles */
     .notifications {
       display: flex;
       justify-content: center;
@@ -220,12 +218,11 @@
       <li><a href="#">Parameter Selection Process for FX</a></li>
       <li><a href="#">FX Transaction Reporting for Management</a></li>
       <li><a href="#">Report Validation and Approval Process</a></li>
-      <li><a href="#">Live FX Transaction Tracking and Strategy Compliance</a></li>
-      <li><a href="#">Report Editing for Presentation Use</a></li>
+      <li><a href="fxlivetracking.html">Live FX Transaction Tracking and Strategy Compliance</a></li>
+      <li><a href="fxpresentation.html">Report Editing for Presentation Use</a></li>
     </ul>
   </div>
   <div class="content" id="mainContent">
-    <!-- Hero Section -->
     <section class="hero">
       <div class="hero-overlay">
         <h2>Welcome to the Dashboard</h2>
@@ -233,26 +230,12 @@
         <a href="#" class="btn-primary">View Reports</a>
       </div>
     </section>
-    <!-- KPI Cards -->
     <section class="kpi-cards">
-      <div class="card">
-        <h4>FX Volume YTD</h4>
-        <p>€1.2 B</p>
-      </div>
-      <div class="card">
-        <h4>Pending Approvals</h4>
-        <p>8</p>
-      </div>
-      <div class="card">
-        <h4>Exceptions</h4>
-        <p>3</p>
-      </div>
-      <div class="card">
-        <h4>New Requests</h4>
-        <p>15</p>
-      </div>
+      <div class="card"><h4>FX Volume YTD</h4><p>€1.2 B</p></div>
+      <div class="card"><h4>Pending Approvals</h4><p>8</p></div>
+      <div class="card"><h4>Exceptions</h4><p>3</p></div>
+      <div class="card"><h4>New Requests</h4><p>15</p></div>
     </section>
-    <!-- Alerts -->
     <section class="alerts">
       <h3>Pending Actions</h3>
       <ul>
@@ -261,29 +244,16 @@
         <li><a href="#">Compliance Alert: Rate deviation</a></li>
       </ul>
     </section>
-    <!-- Recent Reports -->
     <section class="recent-reports">
       <h3>Recent Reports</h3>
-      <div class="report-card">
-        <h4>Q1 FX Strategy Review</h4>
-        <small>25 Apr 2025</small>
-      </div>
-      <div class="report-card">
-        <h4>Monthly FX Volume Report</h4>
-        <small>20 Apr 2025</small>
-      </div>
+      <div class="report-card"><h4>Q1 FX Strategy Review</h4><small>25 Apr 2025</small></div>
+      <div class="report-card"><h4>Monthly FX Volume Report</h4><small>20 Apr 2025</small></div>
     </section>
-    <!-- Internal News -->
     <section class="internal-news">
       <h3>Announcements</h3>
-      <article>
-        <p><strong>28/04/2025:</strong> New FX parameter approval process.</p>
-      </article>
-      <article>
-        <p><strong>22/04/2025:</strong> Reporting system upgrade.</p>
-      </article>
+      <article><p><strong>28/04/2025:</strong> New FX parameter approval process.</p></article>
+      <article><p><strong>22/04/2025:</strong> Reporting system upgrade.</p></article>
     </section>
-    <!-- My Tasks -->
     <section class="my-tasks">
       <h3>Today's Schedule</h3>
       <ul>
@@ -292,7 +262,6 @@
         <li>16:00 – Compliance Check</li>
       </ul>
     </section>
-    <!-- Quick Links -->
     <div class="quick-links">
       <input type="text" placeholder="Search report…">
       <a href="#" class="btn-small">New FX Report</a>
@@ -308,7 +277,11 @@
       const linkText = e.currentTarget.textContent.trim();
       document.getElementById('mainContent').innerHTML = '<h1>' + linkText + '</h1>';
     }
-    document.querySelectorAll('.sidebar ul li a').forEach(link => link.addEventListener('click', showView));
+    document.querySelectorAll('.sidebar ul li a').forEach(link => {
+      if (link.getAttribute('href') === "#") {
+        link.addEventListener('click', showView);
+      }
+    });
     document.getElementById('homeLink').addEventListener('click', function(e) {
       e.preventDefault(); location.reload();
     });
