--- a/homepage.html
+++ b/homepage.html
@@ -205,7 +205,7 @@
 </head>
 <body>
   <div class="top-bar">
-    <img src="file:///C:/Piraeus-Bank-Project/photos/newlogo.png" alt="Piraeus Bank Logo" class="bank-logo">
+    <img src="images/piraeus_new_logo.jpg" alt="Piraeus Bank Logo" class="bank-logo">
   </div>
   <div class="subnav">
     <a href="#" id="homeLink">HOME</a>
