Fixed example chart image

--- a/ParameterSelection.html
+++ b/ParameterSelection.html
@@ -231,7 +231,7 @@
         <div id="graphPopup" class="popup">
           <div class="popup-content">
             <span id="closePopup" class="close">&times;</span>
-            <img src="example-chart.png" alt="Graph Preview" style="max-width:100%;">
+            <img src="images/example-chart.png" alt="Graph Preview" style="max-width:100%;">
           </div>
         </div>
       </div>
