Deleted A in logo

--- a/homepage.html
+++ b/homepage.html
@@ -206,7 +206,7 @@
 <body>
   <div class="top-bar">
     <img src="images/Piraeus-Logo-New.png" alt="Piraeus Bank Logo" class="bank-logo">
-a  </div>
+  </div>
   <div class="subnav">
     <a href="#" id="homeLink">HOME</a>
     <a href="#" id="notificationsLink">NOTIFICATIONS</a>
