αλλαγη ονοματος σε index

--- a/homepage.html
+++ b/homepage.html
@@ -206,7 +206,7 @@
 <body>
   <div class="top-bar">
     <img src="images/Piraeus-Logo-New.png" alt="Piraeus Bank Logo" class="bank-logo">
-  </div>
+a  </div>
   <div class="subnav">
     <a href="#" id="homeLink">HOME</a>
     <a href="#" id="notificationsLink">NOTIFICATIONS</a>
@@ -215,9 +215,9 @@
   <button id="sidebarToggle" class="sidebar-toggle">☰</button>
   <div id="sidebar" class="sidebar">
     <ul>
-      <li><a href="#">Parameter Selection Process for FX</a></li>
-      <li><a href="#">FX Transaction Reporting for Management</a></li>
-      <li><a href="#">Report Validation and Approval Process</a></li>
+      <li><a href="ParameterSelection.html">Parameter Selection Process for FX</a></li>
+      <li><a href="Reporting.html">FX Transaction Reporting for Management</a></li>
+      <li><a href="Validation&Approval.html">Report Validation and Approval Process</a></li>
       <li><a href="fxlivetracking.html">Live FX Transaction Tracking and Strategy Compliance</a></li>
       <li><a href="fxpresentation.html">Report Editing for Presentation Use</a></li>
     </ul>
