--- a/Validation&Approval.html
+++ b/Validation&Approval.html
@@ -3,9 +3,223 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="styleValidation.css">
+  <style>
+    :root {
+      --blue: #00205B;
+      --yellow: #F9E400;
+      --gray-light: #f4f6f8;
+      --gray-medium: #ccd6dd;
+      --text-dark: #333333;
+      --accent: #4CAF50;
+    }
+    * { box-sizing: border-box; }
+    body {
+      margin: 0;
+      font-family: 'Roboto', sans-serif;
+      background: var(--gray-light);
+      display: flex;
+      flex-direction: column;
+      height: 100vh;
+      overflow: hidden;
+    }
+    .top-bar {
+      background: var(--yellow);
+      height: 180px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .top-bar .bank-logo {
+      width: 200px;
+      height: auto;
+    }
+    .subnav {
+      background: #02272e;
+      height: 50px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .subnav a {
+      color: white;
+      text-decoration: none;
+      font-weight: 500;
+      margin-right: 20px;
+      font-size: 16px;
+    }
+    .sidebar-toggle {
+      background: #02272e;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      font-size: 20px;
+      border-radius: 4px;
+      cursor: pointer;
+      font-weight: 500;
+      margin: 10px 20px;
+      align-self: flex-start;
+    }
+    .sidebar {
+      position: fixed;
+      top: 300px;
+      left: -260px;
+      width: 260px;
+      background: white;
+      box-shadow: 2px 0 8px rgba(24, 5, 59, 0.15);
+      padding: 20px;
+      transition: left 0.3s ease;
+      overflow-y: auto;
+      z-index: 999;
+      height: auto;
+    }
+    .sidebar.active { left: 0; }
+    .sidebar ul { list-style: none; padding: 0; margin: 0; }
+    .sidebar ul li { margin-bottom: 15px; }
+    .sidebar ul li a { color: var(--blue); text-decoration: none; font-weight: 500; }
+    .content {
+      flex: 1;
+      padding: 20px;
+      overflow-y: auto;
+    }
+    .hero {
+      background: url('photos/hero-bg.jpg') center/cover no-repeat;
+      height: 300px;
+      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-bottom: 20px;
+    }
+    .hero-overlay {
+      background: rgba(0,0,0,0.5);
+      color: white;
+      text-align: center;
+      padding: 20px;
+      border-radius: 8px;
+    }
+    .btn-primary {
+      display: inline-block;
+      margin-top: 15px;
+      padding: 12px 24px;
+      background: var(--blue);
+      color: white;
+      border-radius: 4px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .kpi-cards {
+      display: grid;
+      grid-template-columns: repeat(auto-fit,minmax(180px,1fr));
+      gap: 20px;
+      margin: 20px 0;
+    }
+    .kpi-cards .card {
+      background: white;
+      padding: 15px;
+      border-radius: 8px;
+      box-shadow: 0 1px 4px rgba(0,0,0,0.1);
+      text-align: center;
+    }
+    .kpi-cards .card h4 { margin-bottom: 8px; font-weight: 500; }
+    .kpi-cards .card p { font-size: 24px; margin: 0; }
+    .alerts, .recent-reports, .internal-news, .my-tasks {
+      background: white;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 1px 4px rgba(0,0,0,0.1);
+      margin-bottom: 20px;
+    }
+    .alerts h3, .recent-reports h3, .internal-news h3, .my-tasks h3 {
+      margin-top: 0;
+      font-weight: 500;
+    }
+    .alerts ul, .my-tasks ul { list-style: none; padding: 0; margin: 0; }
+    .alerts li, .my-tasks li { margin-bottom: 8px; }
+    .alerts a, .recent-reports .report-card, .internal-news article {
+      display: block;
+      text-decoration: none;
+      color: var(--text-dark);
+    }
+    .recent-reports .report-card { margin-bottom: 12px; }
+    .recent-reports .report-card h4 { margin: 0 0 4px; font-weight: 500; }
+    .recent-reports .report-card small { color: #666; }
+    .internal-news article { margin-bottom: 12px; }
+    .internal-news strong { margin-right: 6px; }
+    .quick-links {
+      display: flex;
+      gap: 10px;
+      align-items: center;
+      margin: 20px 0;
+    }
+    .quick-links input { flex: 1; padding: 8px 12px; border: 1px solid var(--gray-medium); border-radius: 4px; }
+    .btn-small { padding: 8px 16px; background: var(--blue); color: white; border-radius: 4px; text-decoration: none; font-size: 14px; }
+    @media (max-width: 768px) {
+      .kpi-cards { grid-template-columns: 1fr; }
+    }
+    .notifications {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+    }
+    .notification-card {
+      background: white;
+      border-left: 5px solid var(--accent);
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      padding: 20px;
+      border-radius: 8px;
+      max-width: 500px;
+      width: 100%;
+    }
+    .notification-header {
+      display: flex;
+      align-items: center;
+      margin-bottom: 12px;
+    }
+    .notification-header .avatar {
+      font-size: 32px;
+      margin-right: 12px;
+    }
+    .notification-header strong {
+      font-size: 18px;
+      margin-right: auto;
+    }
+    .notification-header .timestamp {
+      font-size: 14px;
+      color: #666;
+    }
+    .notification-body p {
+      font-size: 20px;
+      color: var(--text-dark);
+      margin: 0;
+      line-height: 1.4;
+    }
+    @media (max-width: 600px) {
+      .notification-card { padding: 15px; }
+      .notification-body p { font-size: 18px; }
+    }
+  </style>
   <title> Report Validation and Approval Process</title>
 </head>
 <body>
+  <div class="top-bar">
+    <img src="images/Piraeus-Logo-New.png" alt="Piraeus Bank Logo" class="bank-logo">
+a  </div>
+  <div class="subnav">
+    <a href="#" id="homeLink">HOME</a>
+    <a href="#" id="notificationsLink">NOTIFICATIONS</a>
+    <a href="#" id="newsLink">NEWS</a>
+  </div>
+  <button id="sidebarToggle" class="sidebar-toggle">☰</button>
+  <div id="sidebar" class="sidebar">
+    <ul>
+      <li><a href="ParameterSelection.html">Parameter Selection Process for FX</a></li>
+      <li><a href="Reporting.html">FX Transaction Reporting for Management</a></li>
+      <li><a href="Validation&Approval.html">Report Validation and Approval Process</a></li>
+      <li><a href="fxlivetracking.html">Live FX Transaction Tracking and Strategy Compliance</a></li>
+      <li><a href="fxpresentation.html">Report Editing for Presentation Use</a></li>
+    </ul>
+  </div>
   <div class="container">
     <header>
       <h1> Report Validation and Approval Process</h1>
