--- a/fxlivetracking.html
+++ b/fxlivetracking.html
@@ -344,6 +344,11 @@
                 }
             }
         </script>
+              <script>
+                document.getElementById('sidebarToggle').addEventListener('click', function () {
+                  document.getElementById('sidebar').classList.toggle('active');
+                });
+        </script>
 
     </body>
 </html>
