--- a/fxpresentation.html
+++ b/fxpresentation.html
@@ -201,6 +201,12 @@
   </style>
 </head>
 <body>
+    <div class="subnav">
+      <a href="index.html">HOME</a>
+      <a href="notifications.html">NOTIFICATIONS</a>
+      <a href="news.html">NEWS</a>
+    </div>
+    
     <div class="top-bar">
         <img src="images/Piraeus-Logo-New.png" alt="Piraeus Bank Logo" class="bank-logo">
     a  </div>
@@ -370,6 +376,11 @@
                 modal.style.display = "none";
             }
             }
+        </script>
+        <script>
+          document.getElementById('sidebarToggle').addEventListener('click', function () {
+            document.getElementById('sidebar').classList.toggle('active');
+          });
         </script>
     </body>
 </html>
