--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 <body>
   <div class="login-card">
     <div class="header">
-      <img src="file:///C:/Piraeus-Bank-Project/photos/newlogo.png" alt="Λογότυπο Πειραιώς" class="bank-logo">
+      <img src="images/Piraeus-Logo-New.png" alt="Piraeus Bank Logo" class="bank-logo">
     </div>
     <div class="content">
       <h2>Καλώς ήρθατε</h2>
