--- a/fxpresentation.html
+++ b/fxpresentation.html
@@ -200,20 +200,12 @@
     }
   </style>
 </head>
-<body>
-    <div class="subnav">
-      <a href="index.html">HOME</a>
-      <a href="notifications.html">NOTIFICATIONS</a>
-      <a href="news.html">NEWS</a>
-    </div>
-    
+<body>    
     <div class="top-bar">
         <img src="images/Piraeus-Logo-New.png" alt="Piraeus Bank Logo" class="bank-logo">
     a  </div>
       <div class="subnav">
-        <a href="#" id="homeLink">HOME</a>
-        <a href="#" id="notificationsLink">NOTIFICATIONS</a>
-        <a href="#" id="newsLink">NEWS</a>
+        <a href="homepage.html" id="homeLink">HOME</a>
       </div>
       <button id="sidebarToggle" class="sidebar-toggle">☰</button>
       <div id="sidebar" class="sidebar">
