--- a/homepage.html
+++ b/homepage.html
@@ -23,7 +23,6 @@
       display: flex;
       flex-direction: column;
       height: 100vh;
-
     }
     .top-bar {
       background: var(--yellow);
@@ -206,7 +205,7 @@
 <body>
   <div class="top-bar">
     <img src="images/Piraeus-Logo-New.png" alt="Piraeus Bank Logo" class="bank-logo">
-  </div>
+a  </div>
   <div class="subnav">
     <a href="#" id="homeLink">HOME</a>
     <a href="#" id="notificationsLink">NOTIFICATIONS</a>
