--- a/ParameterSelection.html
+++ b/ParameterSelection.html
@@ -210,9 +210,7 @@
 
   <!-- Δευτερεύουσα πλοήγηση -->
   <div class="subnav">
-    <a href="#" id="homeLink">HOME</a>
-    <a href="#" id="notificationsLink">NOTIFICATIONS</a>
-    <a href="#" id="newsLink">NEWS</a>
+    <a href="homepage.html" id="homeLink">HOME</a>
   </div>
 
   <!-- Sidebar toggle & Sidebar -->
