--- a/fxpresentation.html
+++ b/fxpresentation.html
@@ -5,7 +5,7 @@
     <title>Report Editing for Presentation Use</title>
     <link rel="stylesheet" href="style.css">
     <style>
-        :root {
+      :root {
       --blue: #00205B;
       --yellow: #F9E400;
       --gray-light: #f4f6f8;
@@ -18,8 +18,6 @@
       margin: 0;
       font-family: 'Roboto', sans-serif;
       background: var(--gray-light);
-      display: flex;
-      flex-direction: column;
       height: 100vh;
     }
     .top-bar {
@@ -72,17 +70,44 @@
       z-index: 999;
       height: auto;
     }
-    .sidebar.active { left: 0; }
-    .sidebar ul { list-style: none; padding: 0; margin: 0; }
-    .sidebar ul li { margin-bottom: 15px; }
-    .sidebar ul li a { color: var(--blue); text-decoration: none; font-weight: 500; }
+    .sidebar.active {
+      left: 0;
+    }
+
+    .sidebar ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+
+    .sidebar ul li {
+      margin-bottom: 15px;
+    }
+
+    .sidebar ul li a {
+      color: var(--blue);
+      text-decoration: none;
+      font-weight: 500;
+      padding: 10px 16px;
+      display: block;
+      border-radius: 4px;
+      transition: all 0.3s ease; /* Smooth transitions */
+    }
+
+    .sidebar ul li a:hover {
+      background-color: var(--gray-light);
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1); /* Shadow effect on hover */
+      transform: translateX(5px); /* Slight movement to the right */
+    }
+
+  
+
     .content {
       flex: 1;
       max-width: 1000px;
-      margin: 0 auto;
+      margin-left: 260px; /* match sidebar width */
       padding: 20px;
       overflow-y: auto;
-      align-self: center;
     }
     .hero {
       background: url('photos/hero-bg.jpg') center/cover no-repeat;
@@ -209,7 +234,9 @@
   </div>
 
   <div class="subnav">
-      <a href="homepage.html" id="homeLink">HOME</a>
+    <a href="homepage.html" id="homeLink">HOME</a>
+    <a href="homepage.html" id="notificationsLink">NOTIFICATIONS</a>
+    <a href="homepage.html" id="newsLink">NEWS</a>
   </div>
 
   <button id="sidebarToggle" class="sidebar-toggle">☰</button>
