Added underline to home in fxpresentation

--- a/fxpresentation.html
+++ b/fxpresentation.html
@@ -100,7 +100,16 @@
       transform: translateX(5px); /* Slight movement to the right */
     }
 
-  
+    .subnav a:hover {
+      text-decoration: underline;
+    }
+    .subnav a.active {
+      text-decoration: underline;
+      font-weight: bold;
+    }
+    .subnav a.active:hover {
+      text-decoration: none;
+    }
 
     .content {
       flex: 1;
