--- a/fxlivetracking.html
+++ b/fxlivetracking.html
@@ -23,7 +23,7 @@
           .top-bar {
             background: var(--yellow);
             height: 180px;
-            width: 100vw; /* Ensure full viewport width */
+            width: 100vw;
             max-width: 100%;
             display: flex;
             align-items: center;
@@ -34,7 +34,7 @@
           }
 
           .top-bar .bank-logo {
-            height: 110px;             /* Force exact height */
+            height: 110px;  
             max-height: 100%;
             width: auto;
             object-fit: contain;
@@ -116,13 +116,13 @@
             padding: 10px 16px;
             display: block;
             border-radius: 4px;
-            transition: all 0.3s ease; /* Smooth transitions */
+            transition: all 0.3s ease; 
           }
 
           .sidebar ul li a:hover {
             background-color: var(--gray-light);
-            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1); /* Shadow effect on hover */
-            transform: translateX(5px); /* Slight movement to the right */
+            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1); 
+            transform: translateX(5px);
           }
 
           .hero {
@@ -279,10 +279,10 @@
                           <th>Customer</th>
                           <th>Currency Pair</th>
                           <th>Amount</th>
-                          <th>Transaction Type</th> <!--spot or forward-->
-                          <th>Client VBM</th> <!--corporate, institutional, private or retail & other-->
-                          <th>Transaction Date</th> <!--(YYYY-MM-DD)-->
-                          <th>Quarter</th> <!--Qtr1, Qtr2, Qtr3 or Qtr4-->
+                          <th>Transaction Type</th> 
+                          <th>Client VBM</th> 
+                          <th>Transaction Date</th> 
+                          <th>Quarter</th> 
                           <th>Status</th>
                       </tr>
                   </thead>
@@ -316,7 +316,6 @@
           <section>
               <h2>Team Feedback</h2>
               <div id="feedback-container">
-                <!-- Submitted feedback will appear here -->
               </div>
           </section>
 
