--- a/fxpresentation.html
+++ b/fxpresentation.html
@@ -91,13 +91,13 @@
       padding: 10px 16px;
       display: block;
       border-radius: 4px;
-      transition: all 0.3s ease; /* Smooth transitions */
+      transition: all 0.3s ease; 
     }
 
     .sidebar ul li a:hover {
       background-color: var(--gray-light);
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1); /* Shadow effect on hover */
-      transform: translateX(5px); /* Slight movement to the right */
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1); 
+      transform: translateX(5px); 
     }
 
     .subnav a:hover {
@@ -114,7 +114,7 @@
     .content {
       flex: 1;
       max-width: 1000px;
-      margin-left: 260px; /* match sidebar width */
+      margin-left: 260px; 
       padding: 20px;
       overflow-y: auto;
     }
