--- a/Reporting.html
+++ b/Reporting.html
@@ -1,72 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="styleReport.css">
-  <title> FX Transaction Reporting for Management</title>
-</head>
-<body>
-  <div class="top-bar">
-    <img src="images/Piraeus-Logo-New.png" alt="Piraeus Bank Logo" class="bank-logo">
-  </div>
-  <div class="subnav">
-    <a href="#" id="homeLink">HOME</a>
-    <a href="#" id="notificationsLink">NOTIFICATIONS</a>
-    <a href="#" id="newsLink">NEWS</a>
-  </div>
-  <button id="sidebarToggle" class="sidebar-toggle">☰</button>
-  <div id="sidebar" class="sidebar">
-    <ul>
-      <li><a href="ParameterSelection.html">Parameter Selection Process for FX</a></li>
-      <li><a href="Reporting.html">FX Transaction Reporting for Management</a></li>
-      <li><a href="Validation&Approval.html">Report Validation and Approval Process</a></li>
-      <li><a href="fxlivetracking.html">Live FX Transaction Tracking and Strategy Compliance</a></li>
-      <li><a href="fxpresentation.html">Report Editing for Presentation Use</a></li>
-    </ul>
-  </div>
-  <div class="container">
-    <header>
-      <h1>FX Transaction Reporting for Management</h1>
-    </header>
+  <head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="styleReport.css">
+    <title> FX Transaction Reporting for Management</title>
+  </head>
+  <body>
+    <div class="top-bar">
+      <img src="images/Piraeus-Logo-New.png" alt="Piraeus Bank Logo" class="bank-logo">
+    </div>
+    <div class="subnav">
+      <a href="#" id="homeLink">HOME</a>
+      <a href="#" id="notificationsLink">NOTIFICATIONS</a>
+      <a href="#" id="newsLink">NEWS</a>
+    </div>
+    <button id="sidebarToggle" class="sidebar-toggle">☰</button>
+    <div id="sidebar" class="sidebar">
+      <ul>
+        <li><a href="ParameterSelection.html">Parameter Selection Process for FX</a></li>
+        <li><a href="Reporting.html">FX Transaction Reporting for Management</a></li>
+        <li><a href="Validation&Approval.html">Report Validation and Approval Process</a></li>
+        <li><a href="fxlivetracking.html">Live FX Transaction Tracking and Strategy Compliance</a></li>
+        <li><a href="fxpresentation.html">Report Editing for Presentation Use</a></li>
+      </ul>
+    </div>
+    <div class="container">
+        <header>
+          <h1>FX Transaction Reporting for Management</h1>
+        </header>
 
-    <section class="section">
-        <h2>Report FX Transactions</h2>
-        <p>Use this form to report any foreign exchange (FX) transactions that require management review. If you have observed any unusual or irregular activity in FX transactions, please provide detailed information below so we can investigate further.</p>
+        <section class="section">
+            <h2>Report FX Transactions</h2>
+            <p>Use this form to report any foreign exchange (FX) transactions that require management review. If you have observed any unusual or irregular activity in FX transactions, please provide detailed information below so we can investigate further.</p>
 
-        <button type="submit">Monitor FX Transactions</button>
+            <button type="submit">Monitor FX Transactions</button>
 
-        <h2> Have you noticed any abnormal transactions?</h2>
-        <label for="transactions">
-            <input type="radio" id="transactions" name="transaction-option" value="yes" checked>
-            Yes, I have noticed abnormal transactions.
-        </label>
-        <label for="transactions">
-            <input type="radio" id="transactions" name="transaction-option" value="no">
-            No, I have not noticed any abnormal transactions.
-        </label><br><br>
+            <h2> Have you noticed any abnormal transactions?</h2>
+            <label for="transactions">
+                <input type="radio" id="transactions" name="transaction-option" value="yes" checked>
+                Yes, I have noticed abnormal transactions.
+            </label>
+            <label for="transactions">
+                <input type="radio" id="transactions" name="transaction-option" value="no">
+                No, I have not noticed any abnormal transactions.
+            </label><br><br>
 
-        <fieldset>
-            <legend>In which part of the report did you notice the abnormal transactions?</legend>
-            <label><input type="checkbox" name="report-section" value="Selected Facts & Figures (SFFs)"> Selected Facts & Figures (SFFs)</label><br>
-            <label><input type="checkbox" name="report-section" value="Client Segment Analytics"> Client Segment Analytics</label><br>
-            <label><input type="checkbox" name="report-section" value="Deal Size Analytics"> Deal Size Analytics</label><br>
-            <label><input type="checkbox" name="report-section" value="CCY Pair Analytics"> CCY Pair Analytics</label><br>
-            <label><input type="checkbox" name="report-section" value="FX Panorama"> FX Panorama</label><br>
-            <label><input type="checkbox" name="report-section" value="Top 20 Clients"> Top 20 Clients</label><br>
-            <label><input type="checkbox" name="report-section" value="Top 20 Branches"> Top 20 Branches</label><br>
-            <label><input type="checkbox" name="report-section" value="Branch Activity by District"> Branch Activity by District</label><br>
-        </fieldset>
-    </section>
-    <script>
-          document.getElementById('sidebarToggle').addEventListener('click', function () {
-            document.getElementById('sidebar').classList.toggle('active');
-          });
-    </script>
-    <section>
-        <h2>Provide Details of Abnormal Transactions</h2>
-        <p>If you selected "Yes," please describe the nature of the abnormal transactions. Include any relevant details, such as transaction dates, amounts, and involved parties. Your observations are crucial for management to assess and take action.</p>
-        <textarea placeholder="Provide transaction details..."></textarea>
-        <button type="submit">Submit Report to the FX team</button>
-    </section>
-    
-</div>
+            <fieldset>
+                <legend>In which part of the report did you notice the abnormal transactions?</legend>
+                <label><input type="checkbox" name="report-section" value="Selected Facts & Figures (SFFs)"> Selected Facts & Figures (SFFs)</label><br>
+                <label><input type="checkbox" name="report-section" value="Client Segment Analytics"> Client Segment Analytics</label><br>
+                <label><input type="checkbox" name="report-section" value="Deal Size Analytics"> Deal Size Analytics</label><br>
+                <label><input type="checkbox" name="report-section" value="CCY Pair Analytics"> CCY Pair Analytics</label><br>
+                <label><input type="checkbox" name="report-section" value="FX Panorama"> FX Panorama</label><br>
+                <label><input type="checkbox" name="report-section" value="Top 20 Clients"> Top 20 Clients</label><br>
+                <label><input type="checkbox" name="report-section" value="Top 20 Branches"> Top 20 Branches</label><br>
+                <label><input type="checkbox" name="report-section" value="Branch Activity by District"> Branch Activity by District</label><br>
+            </fieldset>
+        </section>
+        <script>
+              document.getElementById('sidebarToggle').addEventListener('click', function () {
+                document.getElementById('sidebar').classList.toggle('active');
+              });
+        </script>
+        <section>
+            <h2>Provide Details of Abnormal Transactions</h2>
+            <p>If you selected "Yes," please describe the nature of the abnormal transactions. Include any relevant details, such as transaction dates, amounts, and involved parties. Your observations are crucial for management to assess and take action.</p>
+            <textarea placeholder="Provide transaction details..."></textarea>
+            <button type="submit">Submit Report to the FX team</button>
+        </section>
+    </div>
+  </body>
+</html>
