--- a/Validation&Approval.html
+++ b/Validation&Approval.html
@@ -10,9 +10,7 @@
     <img src="images/Piraeus-Logo-New.png" alt="Piraeus Bank Logo" class="bank-logo">
   </div>
   <div class="subnav">
-    <a href="#" id="homeLink">HOME</a>
-    <a href="#" id="notificationsLink">NOTIFICATIONS</a>
-    <a href="#" id="newsLink">NEWS</a>
+    <a href="homepage.html" id="homeLink">HOME</a>
   </div>
   <button id="sidebarToggle" class="sidebar-toggle">☰</button>
   <div id="sidebar" class="sidebar">
